Update to minecraft 1.18-pre5